<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sign_up"
        android:textColor="@android:color/darker_gray"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtFullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/lblSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edtFullname"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="bottom|center_vertical|center_horizontal"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/sign_up" />
</RelativeLayout>