<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".userInterface.activities.MainTabActivity$PlaceholderFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

  >

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_alignParentTop="true"

        android:src="@drawable/employee" />

    <!--<EditText-->
    <!--android:id="@+id/edtName"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:ems="10"-->
    <!--android:layout_below="@+id/imgProfile"-->
    <!--android:inputType="textPersonName"-->
    <!--android:text="@string/enter_name" />-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgProfile"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

<LinearLayout
    android:id="@+id/linearDob"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@+id/layoutName">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutName"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"

        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/edtDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_d_o_b"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"/>

</LinearLayout>


    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearDob"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:text="Gender:"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvGender"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Male" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="Female" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgGender"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/enter_Address" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_address"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Save" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/input_layout_address"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:text="Upload" />

    <Button
        android:id="@+id/btnShowLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="44dp"
        android:text="show Location" />


</RelativeLayout>
</ScrollView>


<!--<com.google.android.gms.maps.MapView-->
<!--android:id="@+id/mapView"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_alignParentBottom="true"-->
<!--android:layout_below="@+id/btnSave"-->
<!--android:layout_centerHorizontal="true"-->
<!--android:layout_marginBottom="10dp"-->
<!--android:layout_marginLeft="10dp"-->
<!--android:layout_marginRight="10dp" />-->